# json-t

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  next-questions.txt  pom.xml
.claude/rules/: java.md  rust.md
.claude/scripts/: panic_save.sh
.github/workflows/: release.yml
ai_context/: 00_summary.md  01_principles.md  02_interaction_model.md  03_decisions.md  04_current_state.md  05_next_actions.md  06_technical_map.md  07_crypto_design.md  99_features.md
code/benchmark-schema/: wct20-match.jsont
code/cross-compat/: java-encrypted.jsont  java-generated.jsont  rust-encrypted.jsont  rust-generated.jsont
code/java/: README.md  pom.xml
code/rust/: Cargo.toml  README.md
code/rust/jsont/: AGENTS.md  Cargo.toml  README.md  bench_results.txt  errors.txt  errors_2.txt  log.txt
code/rust/jsont-crypto/: Cargo.toml
code/rust/jsont-crypto/src/: config.rs  context.rs  ecdh_config.rs  env_config.rs  error.rs  field_cipher.rs  lib.rs  passthrough.rs  session.rs
code/rust/jsont-crypto/src/cipher/: aes_gcm.rs  ascon.rs  chacha20.rs  mod.rs  registry.rs
code/rust/jsont-crypto/tests/: cipher_session_tests.rs  cross_compat_tests.rs  ecdh_config_tests.rs  env_config_tests.rs
code/rust/jsont/src/: crypto.rs  error.rs  jsont.pest  lib.rs
code/rust/jsont/src/builder/: catalog.rs  data.rs  enumdef.rs  field.rs  infer.rs  mod.rs  namespace.rs  schema.rs  validation.rs
code/rust/jsont/src/diagnostic/: mod.rs
code/rust/jsont/src/diagnostic/sink/: console.rs  file.rs  memory.rs  mod.rs
code/rust/jsont/src/json/: mod.rs  parser.rs  reader.rs  writer.rs
code/rust/jsont/src/model/: constraint.rs  data.rs  enumdef.rs  field.rs  format.rs  mod.rs  namespace.rs  resolved.rs  schema.rs  validation.rs
code/rust/jsont/src/parse/: expr.rs  mod.rs  rows.rs
code/rust/jsont/src/stringify/: mod.rs  rows.rs
code/rust/jsont/src/transform/: mod.rs  resolve.rs
code/rust/jsont/src/validate/: constraint.rs  mod.rs  rule.rs
code/rust/jsont/tests/: any_of_tests.rs  benchmark_tests.rs  builder_tests.rs  cross_compat_tests.rs  crypto_tests.rs  data_row_tests.rs  dataflow_tests.rs  diagnostic_tests.rs  encrypted_cross_compat_tests.rs  expr_tests.rs  json_tests.rs  orders-schema.jsont  parse_tests.rs  sensitive_dsl_tests.rs  sensitive_row_tests.rs  sensitive_tests.rs  streaming_tests.rs  transform_tests.rs  validation_tests.rs
docs/: GettingStarted.md  JsonT.docx  Performance.md  Types.md  _config.yml  language-spec.md  update_docx.py  ~$JsonT.docx
examples/: Comparison.md
examples/adtech/: bid_stream_compact.jsont.data  openrtb.jsont  sample_bid_request.jsont.data
examples/fintech/: README.md  fix_protocol.jsont  (+5 more)
jsont-adapters-api/: pom.xml
jsont-annotations/: pom.xml
jsont-benchmark/: pom.xml
jsont-common/: pom.xml
jsont-core/: pom.xml  sample-file.jsont
jsont-internal/: pom.xml
jsont-maven-plugin/: pom.xml
jsont-parser/: pom.xml
jsont-processor/: pom.xml
(+627 files in other folders)
