[package]
name        = "jsont-crypto"
version     = "0.2.0"
edition     = "2021"
description = "Envelope encryption for JsonT streams"
license     = "MIT"
repository  = "https://github.com/datakore/json-t"

[dependencies]
thiserror = "1"
aes-gcm   = "0.10"
sha2      = "0.10"
rand      = { version = "0.8", features = ["std", "std_rng"] }
rsa       = { version = "0.9", features = ["sha2"] }
pkcs8     = { version = "0.10", features = ["pem", "std"] }
base64    = "0.22"
